--- a/src/components/ListaRacas/styles.module.scss
+++ b/src/components/ListaRacas/styles.module.scss
@@ -1,6 +1,6 @@
-@import "../../styles/variaveis";
+@import "../../styles/variaveis.module";
 
-.lista-racas {
+.listaRacas {
   display: flex;
   flex-wrap: wrap;
   list-style: none;
